--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
     "@vueuse/motion": "^2.1.0",
     "lucide-vue-next": "^0.376.0",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.1.7",
     "vanilla-tilt": "^1.8.1",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
     "vueperslides": "^3.5.1"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "sass": "^1.77.0",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
